Kubernetes/Ingress/app2/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  labels: # these labels belong to deployment
    app: app2
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels: # these labels should match with pod
      app: app2
      tier: frontend
  template: # this is the pod definition
    metadata:
      labels:
        app: app2
        tier: frontend
    spec:
      containers:
        - name: app2
          image: bhargav863/app2:v1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app2-service
spec:
  selector:
    app: app2
    tier: frontend
  ports:
    - name: name-of-the-service-port
      protocol: "TCP"
      port: 80 # This port belongs to the service
      targetPort: 80 # This port belongs to the container
